--- a/thinkjava2.tex
+++ b/thinkjava2.tex
@@ -200,6 +200,14 @@ Copyright \copyright ~2019 \theauthors.
 
 Permission is granted to copy, distribute, and/or modify this work under the terms of the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License, which is available at \url{https://creativecommons.org/licenses/by-nc-sa/4.0/}.
 
+%slr:  12-05-19
+Adapted by Steven L. Richardson with additional trinkets and other modifications under the original work's Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.
+
+Adaptations and modifications copyright \copyright ~2020 Steven L. Richardson
+
+Permission is granted to copy, distribute, and/or modify this work under the terms of the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License, which is available at \url{https://creativecommons.org/licenses/by-nc-sa/4.0/}.
+%slr: end 12-05-19
+
 \vspace{1em}
 
 \end{htmlonly}
