--- a/ch12.tex
+++ b/ch12.tex
@@ -190,6 +190,8 @@ public String toString() {
 When we display a card, \java{println} automatically calls \java{toString}.
 The output of the following code is {\tt Jack of Diamonds}.
 
+%slr:  1-3-20: place trinket here which runs the stuff in this section
+
 \begin{code}
 Card card = new Card(11, 1);
 System.out.println(card);
@@ -255,6 +257,7 @@ One advantage of defining \java{SUITS} and \java{RANKS} as class variables is th
 They may also be needed in other methods and classes, so it's helpful to make them available everywhere.
 Since the array variables are \java{final}, and the strings they reference are immutable, there is no danger in making them \java{public}.
 
+%slr:  1-3-20: Section exercise:  modify above trinket so that it has these public static final arrays 
 
 \section{The compareTo Method}
 
@@ -325,6 +328,7 @@ It compares suits first.
 If the suits are the same, it compares ranks.
 If the ranks are also the same, it returns 0.
 
+%slr:  insert trinket.  implement code above with if-else and ask in a Section Exercise that they implement it as above
 
 \section{Cards are Immutable}
 
@@ -367,6 +371,7 @@ You can initialize these these variables inside a constructor,
 but if someone writes a method that tries to modify them, they'll get a compiler error.
 This kind of safeguard helps prevent future mistakes and hours of debugging.
 
+%slr:  insert trinket implementaton of above.  In Section Exercise ask that they demonstrate immutability by providing, say, a setter
 
 \section{Arrays of Cards}
 \label{cardarray}
@@ -427,6 +432,9 @@ System.out.println(cards[0].rank);  // NullPointerException
 \index{loop!nested}
 
 That code won't work until we put cards in the array.
+
+%slr: trinket which access a null object and tries to prin it.
+
 One way to populate the array is to write nested \java{for} loops:
 
 \begin{code}
@@ -489,6 +497,7 @@ The \java{Arrays} class provides a \java{toString} method that invokes \java{toS
 System.out.println(Arrays.toString(cards))
 \end{code}
 
+%slr:  Section Exercises:  1. fix trinket above by initializing the array of Card objects and show it worked by printing one out.  2.  Implement and test the printDeck method above.  3.  Try the Arrays.toString method as shown above.
 
 \section{Sequential Search}
 
