--- a/latexonly.tex
+++ b/latexonly.tex
@@ -108,7 +108,7 @@
 
 % code listing environments
 \lstnewenvironment{code}
-{\minipage{\linewidth}}
+{\lstset{numbers=left}\minipage{\linewidth}}
 {\endminipage}
 \lstnewenvironment{stdout}
 {\lstset{commentstyle=,keywordstyle=,stringstyle=}\minipage{\linewidth}}
